--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <a href="#inicial" class="menu-link active" data-section="inicial">🏠 <span>Inicial</span></a>
       </li>
       <li class="menu-item">
-        <a href="#drogas" class="drogas.html" data-section="drogas">💊 <span>Drogas Apreendidas</span></a>
+        <a href="#drogas" class="drogas-link" data-section="drogas">💊 <span>Drogas Apreendidas</span></a>
       </li>
       <li class="menu-item">
         <a href="#regioes" class="menu-link" data-section="regioes">🌍 <span>Regiões</span></a>
