--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </li>
       <li class="menu-item">
       <!-- antes: href="#drogas" -->
-        <a href="./drogas.html" class="menu-link external" data-section="drogas">💊 <span>Drogas Apreendidas</span></a>
+        <a href="/Ocorrencia/drogas.html" class="menu-link external" data-section="drogas">💊 <span>Drogas Apreendidas</span></a>
       </li>
       <li class="menu-item">
         <a href="#regioes" class="menu-link" data-section="regioes">🌍 <span>Regiões</span></a>
