--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
       <li class="menu-item">
         <a href="/Ocorrencia/drogas.html" class="menu-link external">💊 <span>Drogas Apreendidas</span></a>
       </li>
-
+      <li class="menu-item">
+        <a href="/Ocorrencia/detidos.html" class="menu-link" data-section="equipes">👥 <span>Equipes</span></a>
+      </li>
       <li class="menu-item">
         <a href="#regioes" class="menu-link" data-section="regioes">🌍 <span>Regiões</span></a>
       </li>
       <li class="menu-item">
         <a href="#horarios" class="menu-link" data-section="horarios">⏰ <span>Horários</span></a>
       </li>
-      <li class="menu-item">
-        <a href="#equipes" class="menu-link" data-section="equipes">👥 <span>Equipes</span></a>
-      </li>
+      
     </ul>
   </nav>
 
