--- a/drogas.html
+++ b/drogas.html
@@ -112,7 +112,7 @@
       <nav class="nav" id="nav">
         <a href="index.html" class="" ><span class="ico">🏠</span><span class="label">Página inicial</span></a>
         <a href="drogas.html" class="active"><span class="ico">💊</span><span class="label">Drogas Apreendidas</span></a>
-        <a href="#equipe" data-target="equipe-section"><span class="ico">👥</span><span class="label">Equipe</span></a>
+        <a href="detidos.html" data-target="equipe-section"><span class="ico">👥</span><span class="label">Equipe</span></a>
         <a href="#regioes" data-target="regioes-section"><span class="ico">🌍</span><span class="label">Regiões</span></a>
         <a href="#horarios" data-target="horarios-section"><span class="ico">⏰</span><span class="label">Horários</span></a>
         <a href="#config" data-target="config-section"><span class="ico">⚙️</span><span class="label">Configurações</span></a>
